--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,8 @@
 
 /* Your CSS Code here. */
+img {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      margin-bottom: 10px;
+    }
